--- a/order.html
+++ b/order.html
@@ -9,16 +9,19 @@
 <body>
     <header>
         <div class="container">
-            <nav>
-                <a href="index.html">Pho Que</a>
-                <ul>
-                    <li><a href="index.html" class="nav-link"><span>Home</span></a></li>
-                    <li><a href="menu.html" class="nav-link"><span>Menu</span></a></li>
-                    <li><a href="contact.html" class="nav-link"><span>Contact</span></a></li>
-                    <li><a href="order.html" class="order-button">Order NOW!</a></li>
-                </ul>
+            <nav class="navbar">
+              <a href="index.html" class="logo">Pho Que</a>
+        
+              <button class="hamburger" id="hamburger">&#9776;</button>
+        
+              <ul class="nav-links" id="nav-links">
+                <li><a href="index.html" class="nav-link"><span>Home</span></a></li>
+                <li><a href="menu.html" class="nav-link"><span>Menu</span></a></li>
+                <li><a href="contact.html" class="nav-link"><span>Contact</span></a></li>
+                <li><a href="order.html" class="order-button">Order NOW!</a></li>
+              </ul>
             </nav>
-        </div>
+          </div>
         <div class="hero">
             <h1>Order Online</h1>
             <p>Get your favorite Pho delivered straight to your door!</p>
