--- a/order.html
+++ b/order.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Order Now - Pho Que</title>
+    <title>Ordering page</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.avif" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -32,6 +33,16 @@
         <a href="https://www.doordash.com/store/yourrestaurant" target="_blank" class="button">Order on DoorDash</a>
         <a href="https://www.ubereats.com/store/yourrestaurant" target="_blank" class="button">Order on Uber Eats</a>
     </div>
+
+    <script>
+        const hamburger = document.getElementById('hamburger');
+        const navLinks = document.getElementById('nav-links');
+      
+        hamburger.addEventListener('click', () => {
+          navLinks.classList.toggle('show');
+        });
+    </script>
+
     
 
     <footer>
