--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
             <a href="index.html" class="logo">
               <img src="menu-header.png" alt="Pho Que Logo">
             </a>
-            
             <button class="hamburger" id="hamburger">&#9776;</button>
-      
             <ul class="nav-links" id="nav-links">
               <li><a href="index.html" class="nav-link"><span>Home</span></a></li>
               <li><a href="menu.html" class="nav-link"><span>Menu</span></a></li>
@@ -29,7 +27,7 @@
       </header>
 
       <div class="hero">
-        <h1>Authentic Pho, Exceptional Taste.</h1>
+        <h1>Authentic Phở, Competitive Price.</h1>
         <p>Experience Vietnamese flavors like never before.</p>
         <a href="menu.html" class="button">View Our Menu</a>
       </div>
