--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </header>
 
       <div class="hero">
-        <h1>Authentic Phở, Competitive Price.</h1>
+        <h1>Authentic Pho, Competitive Price.</h1>
         <p>Experience Vietnamese flavors like never before.</p>
         <a href="menu.html" class="button">View Our Menu</a>
       </div>
