--- a/contact.html
+++ b/contact.html
@@ -46,12 +46,12 @@
             </div>
       
             <div class="info-block">
-              <h3>Message Us</h3>
+              <h3>Follow Us</h3>
               <div class="social-links">
-                <a href="https://www.instagram.com/phoquerestaurant/" target="_blank" class="social-icon">
+                <a href="https://www.instagram.com/phoquerestaurant/" target="_blank" class="social-icon" style="font-size: 35px; line-height: 45px; background: #833ab4; background: linear-gradient(to right,#833ab4,#fd1d1d,#fcb045);">
                   <i class="fab fa-instagram"></i>
                 </a>
-                <a href="https://www.facebook.com/profile.php?id=61564968821076" target="_blank" class="social-icon">
+                <a href="https://www.facebook.com/profile.php?id=61564968821076" target="_blank" class="social-icon" style="font-size: 35px; line-height: 45px; background-color: #1877F2;">
                   <i class="fab fa-facebook"></i>
                 </a>
               </div>
@@ -136,11 +136,11 @@
       <div class="footer-column">
           <h3>Follow Us</h3>
           <div class="social-icons">
-            <a href="https://www.instagram.com/phoquerestaurant/" target="_blank" class="social-icon" aria-label="Instagram">
+            <a href="https://www.instagram.com/phoquerestaurant/" target="_blank" class="social-icon" aria-label="Instagram" style="background: #833ab4; background: linear-gradient(to right,#833ab4,#fd1d1d,#fcb045);">
               <i class="fab fa-instagram"></i>
             </a>
             <a href="https://www.facebook.com/profile.php?id=61564968821076" target="_blank" class="social-icon" aria-label="Facebook">
-              <i class="fab fa-facebook-f"></i>
+              <i class="fab fa-facebook"></i>
             </a>
           </div>
         </div>
