--- a/policies.html
+++ b/policies.html
@@ -106,11 +106,11 @@
       <div class="footer-column">
           <h3>Follow Us</h3>
           <div class="social-icons">
-            <a href="https://www.instagram.com/phoquerestaurant/" target="_blank" class="social-icon" aria-label="Instagram">
+            <a href="https://www.instagram.com/phoquerestaurant/" target="_blank" class="social-icon" aria-label="Instagram" style="background: #833ab4; background: linear-gradient(to right,#833ab4,#fd1d1d,#fcb045);">
               <i class="fab fa-instagram"></i>
             </a>
             <a href="https://www.facebook.com/profile.php?id=61564968821076" target="_blank" class="social-icon" aria-label="Facebook">
-              <i class="fab fa-facebook-f"></i>
+              <i class="fab fa-facebook"></i>
             </a>
           </div>
         </div>
