--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
             </div>
 
     </section>
-      <section class="contact-page">
+      <section class="contact-page" style="padding: 0px 40px;">
       <div class="contact-inline">
           <div class="faq-block">
             <h3>Frequently Asked Questions</h3>
