carousel fix, cosmetic updates

--- a/order.html
+++ b/order.html
@@ -27,7 +27,7 @@
     
       <div class="order-page">
         <h1>Order Online</h1>
-        <p>Get your food delivered straight to your door with our partners!</p><br>
+        <p>Delivery or Pick up, your choice!</p><br>
         <div class="delivery-buttons">
           <a href="https://www.grubhub.com/restaurant/pho-que-restaurant-291-adams-st-dorchester/11009112" target="_blank" class="delivery-button">
             <img src="grubhub-logo.png" alt="Grubhub">
