--- a/policies.html
+++ b/policies.html
@@ -25,7 +25,7 @@
         </div>
       </header>
 
-    <section class="contact-page">
+    <section class="contact-page" style="border-top: 2px solid #9b090d;">
         <div class="contact-container">
             <h2>Our Policies</h2>
             <p>Welcome to Pho Que! We strive to provide not only delicious food, but also a transparent and respectful experience for every guest. <br>
