--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
       </header>
 
 
-      <section class="contact-page">
+      <section class="contact-page" style="border-top: 2px solid #9b090d;">
         <div class="contact-container">
           <h2>Contact Us</h2>
           <p>Have a question or reservation? Give us a call or drop by!</p>
