--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
     <section class="scroll-section">
         <div class="ticker-container">
           <div class="ticker-track" id="ticker-track">
-            <span class="ticker-text">Food and Drinks * Authentic Vietnamese Flavors * Fresh Ingredients * Explore Our Diversive Menu * Hosting Events and Parties *</span>
-            <span class="ticker-text">Food and Drinks * Authentic Vietnamese Flavors * Fresh Ingredients * Explore Our Diversive Menu * Hosting Events and Parties *</span>
-            <span class="ticker-text">Food and Drinks * Authentic Vietnamese Flavors * Fresh Ingredients * Explore Our Diversive Menu * Hosting Events and Parties *</span>
+            <span class="ticker-text">Food and Drinks 🍹 Authentic Vietnamese Flavors 🌿 Fresh Ingredients 🍲 Explore Our Diversive Menu 🎉 Hosting Events and Parties 🍜</span>
+            <span class="ticker-text">Food and Drinks 🍹 Authentic Vietnamese Flavors 🌿 Fresh Ingredients 🍲 Explore Our Diversive Menu 🎉 Hosting Events and Parties 🍜</span>
+            <span class="ticker-text">Food and Drinks 🍹 Authentic Vietnamese Flavors 🌿 Fresh Ingredients 🍲 Explore Our Diversive Menu 🎉 Hosting Events and Parties 🍜</span>
           </div>
         </div>
       </section>
@@ -207,18 +207,58 @@
 </script>
 
 <script>
-  function scrollCarousel(direction) {
+  document.addEventListener("DOMContentLoaded", () => {
     const carousel = document.getElementById("favourites-carousel");
+    const leftBtn = document.querySelector(".carousel-btn.left");
+    const rightBtn = document.querySelector(".carousel-btn.right");
     const card = carousel.querySelector(".favourite-card");
-    const scrollAmount = card.offsetWidth + 30; // card width + gap
+    const gap = 30; // Match your CSS gap
+    const cardWidth = card.offsetWidth + gap;
+    let isAutoScrolling = false;
 
-    carousel.scrollBy({
-      left: direction * scrollAmount,
-      behavior: "smooth"
+    // Function to update arrow visibility
+    function updateArrowVisibility() {
+      const scrollLeft = carousel.scrollLeft;
+      const maxScrollLeft = carousel.scrollWidth - carousel.clientWidth;
+
+      // Hide left arrow at the beginning
+      leftBtn.style.display = scrollLeft <= 0 ? "none" : "flex";
+
+      // Hide right arrow at the end
+      rightBtn.style.display = scrollLeft >= maxScrollLeft - 1 ? "none" : "flex";
+    }
+
+    // Initial visibility check
+    updateArrowVisibility();
+
+    window.scrollCarousel = function (direction) {
+      if (isAutoScrolling) return;
+      isAutoScrolling = true;
+
+      carousel.scrollBy({
+        left: direction * cardWidth,
+        behavior: "smooth"
+      });
+
+      setTimeout(() => {
+        isAutoScrolling = false;
+        updateArrowVisibility(); // Check after scrolling finishes
+      }, 500); // Match scroll animation duration
+    };
+
+    // Also update on manual scroll (swipe or drag)
+    carousel.addEventListener("scroll", () => {
+      updateArrowVisibility();
     });
-  }
+
+    // Handle window resize (in case card size changes)
+    window.addEventListener("resize", () => {
+      updateArrowVisibility();
+    });
+  });
 </script>
-      
+
+
       
 </body>
 </html>
