--- a/contact.html
+++ b/contact.html
@@ -40,8 +40,9 @@
             <div class="info-block">
               <h3>Business Hours</h3>
               <ul class="business-hours">
-                <p>All week: 10:00 AM – 9:00 PM</p>
-                <p>Holidays: Please contact!</p>
+                <p>Monday - Tuesday: 10 am - 9 pm</p>
+                <p>Wednesday: CLOSED</p>
+                <p>Thursday - Sunday: 10 am - 9 pm</p>
               </ul>
             </div>
       
@@ -121,8 +122,10 @@
       <div class="footer-column">
           <p><br>291 Adams St, Dorchester, MA 02122</p>
           <p>Phone: (617) 219 9999</p>
-          <p>Operating Hours:<br>
-          All week: 10 am - 9 pm</p>
+          <p>Operating Hours:</p>
+          <p>Monday - Tuesday: 10 am - 9 pm<br>
+          Wednesday: CLOSED<br>
+          Thursday - Sunday: 10 am - 9 pm<br></p>
       </div>
       
       <div class="footer-column">
