--- a/index.html
+++ b/index.html
@@ -153,12 +153,14 @@
 
     <footer>
         <div class="footer-container">
-            <div class="footer-column">
-                <p><br>291 Adams St, Dorchester, MA 02122</p>
-                <p>Phone: (617) 219 9999</p>
-                <p>Operating Hours:<br>
-                All week: 10 am - 9 pm</p>
-            </div>
+          <div class="footer-column">
+            <p><br>291 Adams St, Dorchester, MA 02122</p>
+            <p>Phone: (617) 219 9999</p>
+            <p>Operating Hours:</p>
+            <p>Monday - Tuesday: 10 am - 9 pm<br>
+            Wednesday: CLOSED<br>
+            Thursday - Sunday: 10 am - 9 pm<br></p>
+          </div>
             
             <div class="footer-column">
                 <h3>Quick Links</h3>
