Update operating hours in footer section

--- a/index.html
+++ b/index.html
@@ -157,9 +157,7 @@
             <p><br>291 Adams St, Dorchester, MA 02122</p>
             <p>Phone: (617) 219 9999</p>
             <p>Operating Hours:</p>
-            <p>Monday - Tuesday: 10 am - 9 pm<br>
-            Wednesday: CLOSED<br>
-            Thursday - Sunday: 10 am - 9 pm<br></p>
+            <p>Every day: 10am - 11pm<br></p>
           </div>
             
             <div class="footer-column">
