Update business hours in contact.html

--- a/contact.html
+++ b/contact.html
@@ -40,9 +40,7 @@
             <div class="info-block">
               <h3>Business Hours</h3>
               <ul class="business-hours">
-                <p>Monday - Tuesday: 10 am - 9 pm</p>
-                <p>Wednesday: CLOSED</p>
-                <p>Thursday - Sunday: 10 am - 9 pm</p>
+                <p>Everyday: 10am - 11pm</p>
               </ul>
             </div>
       
@@ -120,13 +118,11 @@
 <footer>
   <div class="footer-container">
       <div class="footer-column">
-          <p><br>291 Adams St, Dorchester, MA 02122</p>
-          <p>Phone: (617) 219 9999</p>
-          <p>Operating Hours:</p>
-          <p>Monday - Tuesday: 10 am - 9 pm<br>
-          Wednesday: CLOSED<br>
-          Thursday - Sunday: 10 am - 9 pm<br></p>
-      </div>
+            <p><br>291 Adams St, Dorchester, MA 02122</p>
+            <p>Phone: (617) 219 9999</p>
+            <p>Operating Hours:</p>
+            <p>Every day: 10am - 11pm<br></p>
+          </div>
       
       <div class="footer-column">
           <h3>Quick Links</h3>
