Update footer with new operating hours

--- a/policies.html
+++ b/policies.html
@@ -89,13 +89,11 @@
 <footer>
   <div class="footer-container">
     <div class="footer-column">
-      <p><br>291 Adams St, Dorchester, MA 02122</p>
-      <p>Phone: (617) 219 9999</p>
-      <p>Operating Hours:</p>
-      <p>Monday - Tuesday: 10 am - 9 pm<br>
-      Wednesday: CLOSED<br>
-      Thursday - Sunday: 10 am - 9 pm<br></p>
-    </div>
+            <p><br>291 Adams St, Dorchester, MA 02122</p>
+            <p>Phone: (617) 219 9999</p>
+            <p>Operating Hours:</p>
+            <p>Every day: 10am - 11pm<br></p>
+          </div>
       
       <div class="footer-column">
           <h3>Quick Links</h3>
